# snapvault

./: .gitignore  ARCHITECTURE.md  Dockerfile  FORMAT.md  Makefile  README.md  go.mod
.github/workflows/: ci.yml
cmd/snapvault/: main.go
core/: CMakeLists.txt
core/include/snapvault/: chunker.h  content_store.h  engine.h  fs_util.h  manifest.h  sha256.h
core/src/: chunker.cpp  content_store.cpp  engine.cpp  fs_util.cpp  main.cpp  manifest.cpp  sha256.cpp
core/tests/: test_diff.cpp  test_gc.cpp  test_hash_chunk.cpp  test_pitr.cpp  test_retain.cpp  test_snapshot.cpp  test_util.h
internal/cluster/: cluster.go  cluster_test.go  repair.go  repair_test.go  state.go  verify.go  verify_test.go
internal/distribute/: distribute.go  distribute_test.go
internal/store/: store.go  store_test.go
scripts/: demo.sh
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  app.css  theme.css  useVault.ts
web/src/components/: ChunksDedup.tsx  Distribution.tsx  FailureRestore.tsx  Footer.tsx  Hero.tsx  primitives.tsx
web/src/sim/: chunker.ts  cluster.ts  contentStore.ts  dataset.ts  distribute.ts  engine.ts  selfcheck.ts  sha256.ts
